--- a/views/users.ejs
+++ b/views/users.ejs
@@ -26,7 +26,8 @@
                     <td><%=data.data[i].lastname%></td>
                     <td><%=data.data[i].email%></td>
                     <td>
-                        <a class="a-inside edit" href="../users/<%=data.data[i].id%>">Edit</a>
+                        <a class="a-inside edit" href="../users/<%=data.data[i].id%>"
+                        onClick="r()">Edit</a>
                         <a class="a-inside delete" href="../users/delete/<%=data.data[i].id%>">Delete</a>
                     </td>
                 </tr>
